Tidying up the merged data

--- a/nbs/03a_anatel.ipynb
+++ b/nbs/03a_anatel.ipynb
@@ -91,7 +91,7 @@
    ],
    "source": [
     "#| export\n",
-    "load_dotenv(find_dotenv())\n"
+    "load_dotenv(find_dotenv())"
    ]
   },
   {
@@ -109,172 +109,182 @@
    "source": [
     "# |export\n",
     "class Outorgadas(Base):\n",
-    "\t\"\"\"Classe auxiliar para agregar os dados originários da Anatel\"\"\"\n",
+    "    \"\"\"Classe auxiliar para agregar os dados originários da Anatel\"\"\"\n",
     "\n",
-    "\tdef __init__(\n",
-    "\t\tself,\n",
-    "\t\tsql_params: dict = SQLSERVER_PARAMS,\n",
-    "\t\tmongo_uri: str = MONGO_URI,\n",
-    "\t\tlimit: int = 0,\n",
-    "\t):\n",
-    "\t\tself.sql_params = sql_params\n",
-    "\t\tself.mongo_uri = mongo_uri\n",
-    "\t\tself.limit = limit\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        sql_params: dict = SQLSERVER_PARAMS,\n",
+    "        mongo_uri: str = MONGO_URI,\n",
+    "        limit: int = 0,\n",
+    "    ):\n",
+    "        self.sql_params = sql_params\n",
+    "        self.mongo_uri = mongo_uri\n",
+    "        self.limit = limit\n",
     "\n",
-    "\t@property\n",
-    "\tdef columns(self):\n",
-    "\t\treturn COLUNAS\n",
+    "    @property\n",
+    "    def columns(self):\n",
+    "        return COLUNAS\n",
     "\n",
-    "\t@cached_property\n",
-    "\tdef df_cache(self) -> pd.DataFrame:\n",
-    "\t\ttry:\n",
-    "\t\t\tdf = self._read(self.stem)\n",
-    "\t\texcept ValueError:\n",
-    "\t\t\tdf = pd.DataFrame(columns=self.columns)\n",
-    "\t\treturn df\n",
+    "    @cached_property\n",
+    "    def df_cache(self) -> pd.DataFrame:\n",
+    "        try:\n",
+    "            df = self._read(self.stem)\n",
+    "        except ValueError:\n",
+    "            df = pd.DataFrame(columns=self.columns)\n",
+    "        return df\n",
     "\n",
-    "\t@property\n",
-    "\tdef stem(self):\n",
-    "\t\treturn 'anatel'\n",
+    "    @property\n",
+    "    def stem(self):\n",
+    "        return \"anatel\"\n",
     "\n",
-    "\t@staticmethod\n",
-    "\tdef _update_instance(class_instance):\n",
-    "\t\tclass_instance.update()\n",
-    "\t\tclass_instance.save()\n",
-    "\t\treturn class_instance.df\n",
+    "    @staticmethod\n",
+    "    def _update_instance(class_instance):\n",
+    "        class_instance.update()\n",
+    "        class_instance.save()\n",
+    "        return class_instance.df\n",
     "\n",
-    "\t@cached_property\n",
-    "\tdef extraction(self) -> L:\n",
-    "\t\tsources = [\n",
-    "\t\t\tTelecom(self.mongo_uri, self.limit),\n",
-    "\t\t\tSMP(self.mongo_uri, self.limit),\n",
-    "\t\t\tSRD(self.mongo_uri),\n",
-    "\t\t\tStel(self.sql_params),\n",
-    "\t\t\tRadcom(self.sql_params),\n",
-    "\t\t\tAero(),\n",
-    "\t\t]\n",
+    "    @cached_property\n",
+    "    def extraction(self) -> L:\n",
+    "        sources = [\n",
+    "            Telecom(self.mongo_uri, self.limit),\n",
+    "            SMP(self.mongo_uri, self.limit),\n",
+    "            SRD(self.mongo_uri),\n",
+    "            Stel(self.sql_params),\n",
+    "            Radcom(self.sql_params),\n",
+    "            Aero(),\n",
+    "        ]\n",
     "\n",
-    "\t\treturn parallel(Outorgadas._update_instance, sources, n_workers=len(sources), progress=True)\n",
+    "        return parallel(\n",
+    "            Outorgadas._update_instance, sources, n_workers=len(sources), progress=True\n",
+    "        )\n",
     "\n",
-    "\t@staticmethod\n",
-    "\tdef verify_shapefile_folder():\n",
-    "\t\t# Convert the file paths to Path objects\n",
-    "\t\tshapefile_path = Path(IBGE_POLIGONO)\n",
-    "\t\tparent_folder = shapefile_path.parent\n",
-    "\t\tparent_folder.mkdir(exist_ok=True, parents=True)\n",
-    "\t\tzip_file_path = parent_folder.with_suffix('.zip')\n",
+    "    @staticmethod\n",
+    "    def verify_shapefile_folder():\n",
+    "        # Convert the file paths to Path objects\n",
+    "        shapefile_path = Path(IBGE_POLIGONO)\n",
+    "        parent_folder = shapefile_path.parent\n",
+    "        parent_folder.mkdir(exist_ok=True, parents=True)\n",
+    "        zip_file_path = parent_folder.with_suffix(\".zip\")\n",
     "\n",
-    "\t\t# Check if all required files exist\n",
-    "\t\trequired_files = L('.cpg', '.dbf', '.prj', '.shx').map(shapefile_path.with_suffix)\n",
-    "\t\tif not all(required_files.map(Path.is_file)):\n",
-    "\t\t\t# shutil.rmtree(str(shapefile_path.parent), ignore_errors=True)\n",
-    "\t\t\tparent_folder.ls().map(Path.unlink)\n",
-    "\t\t\t# Download and unzip the zipped folder\n",
-    "\t\t\turllib.request.urlretrieve(MALHA_IBGE, zip_file_path)\n",
-    "\t\t\twith ZipFile(zip_file_path, 'r') as zip_ref:\n",
-    "\t\t\t\tzip_ref.extractall(parent_folder)\n",
-    "\t\t\tzip_file_path.unlink()\n",
+    "        # Check if all required files exist\n",
+    "        required_files = L(\".cpg\", \".dbf\", \".prj\", \".shx\").map(\n",
+    "            shapefile_path.with_suffix\n",
+    "        )\n",
+    "        if not all(required_files.map(Path.is_file)):\n",
+    "            # shutil.rmtree(str(shapefile_path.parent), ignore_errors=True)\n",
+    "            parent_folder.ls().map(Path.unlink)\n",
+    "            # Download and unzip the zipped folder\n",
+    "            urllib.request.urlretrieve(MALHA_IBGE, zip_file_path)\n",
+    "            with ZipFile(zip_file_path, \"r\") as zip_ref:\n",
+    "                zip_ref.extractall(parent_folder)\n",
+    "            zip_file_path.unlink()\n",
     "\n",
-    "\tdef fill_nan_coordinates(\n",
-    "\t\tself,\n",
-    "\t\tdf: pd.DataFrame,  # DataFrame com os dados da Anatel\n",
-    "\t) -> pd.DataFrame:  # DataFrame com as coordenadas validadas na base do IBGE\n",
-    "\t\t\"\"\"Valida as coordenadas consultado a Base Corporativa do IBGE, excluindo o que já está no cache na versão anterior\"\"\"\n",
+    "    def fill_nan_coordinates(\n",
+    "        self,\n",
+    "        df: pd.DataFrame,  # DataFrame com os dados da Anatel\n",
+    "    ) -> pd.DataFrame:  # DataFrame com as coordenadas validadas na base do IBGE\n",
+    "        \"\"\"Valida as coordenadas consultado a Base Corporativa do IBGE, excluindo o que já está no cache na versão anterior\"\"\"\n",
     "\n",
-    "\t\tmunicipios = pd.read_csv(\n",
-    "\t\t\tIBGE_MUNICIPIOS,\n",
-    "\t\t\tusecols=['Código_Município', 'Latitude', 'Longitude'],\n",
-    "\t\t\tdtype='string[pyarrow]',\n",
-    "\t\t\tdtype_backend='pyarrow',\n",
-    "\t\t)\n",
+    "        municipios = pd.read_csv(\n",
+    "            IBGE_MUNICIPIOS,\n",
+    "            usecols=[\"Código_Município\", \"Latitude\", \"Longitude\"],\n",
+    "            dtype=\"string[pyarrow]\",\n",
+    "            dtype_backend=\"pyarrow\",\n",
+    "        )\n",
     "\n",
-    "\t\tdf = pd.merge(df, municipios, on='Código_Município', how='left', copy=False)\n",
+    "        df = pd.merge(df, municipios, on=\"Código_Município\", how=\"left\", copy=False)\n",
     "\n",
-    "\t\tnull_coords = df.Latitude_x.isna() | df.Longitude_x.isna()\n",
+    "        null_coords = df.Latitude_x.isna() | df.Longitude_x.isna()\n",
     "\n",
-    "\t\tdf.loc[null_coords, ['Latitude_x', 'Longitude_x']] = df.loc[\n",
-    "\t\t\tnull_coords, ['Latitude_y', 'Longitude_y']\n",
-    "\t\t]\n",
+    "        df.loc[null_coords, [\"Latitude_x\", \"Longitude_x\"]] = df.loc[\n",
+    "            null_coords, [\"Latitude_y\", \"Longitude_y\"]\n",
+    "        ]\n",
     "\n",
-    "\t\tlog = \"\"\"[(\"Colunas\", [\"Latitude\", \"Longitude\"]),\n",
+    "        log = \"\"\"[(\"Colunas\", [\"Latitude\", \"Longitude\"]),\n",
     "\t\t           (\"Processamento\", \"Coordenadas Ausentes. Inserido coordenadas do Município\")]\"\"\"\n",
-    "\t\tdf = self.register_log(df, log, null_coords)\n",
+    "        df = self.register_log(df, log, null_coords)\n",
     "\n",
-    "\t\tdf.rename(\n",
-    "\t\t\tcolumns={\n",
-    "\t\t\t\t'Latitude_x': 'Latitude',\n",
-    "\t\t\t\t'Longitude_x': 'Longitude',\n",
-    "\t\t\t\t'Latitude_y': 'Latitude_ibge',\n",
-    "\t\t\t\t'Longitude_y': 'Longitude_ibge',\n",
-    "\t\t\t},\n",
-    "\t\t\tinplace=True,\n",
-    "\t\t)\n",
+    "        df.rename(\n",
+    "            columns={\n",
+    "                \"Latitude_x\": \"Latitude\",\n",
+    "                \"Longitude_x\": \"Longitude\",\n",
+    "                \"Latitude_y\": \"Latitude_ibge\",\n",
+    "                \"Longitude_y\": \"Longitude_ibge\",\n",
+    "            },\n",
+    "            inplace=True,\n",
+    "        )\n",
     "\n",
-    "\t\treturn df\n",
+    "        return df\n",
     "\n",
-    "\tdef intersect_coordinates_on_poligon(self, df: pd.DataFrame, check_municipio: bool = True):\n",
-    "\t\tregions = gpd.read_file(IBGE_POLIGONO)\n",
+    "    def intersect_coordinates_on_poligon(\n",
+    "        self, df: pd.DataFrame, check_municipio: bool = True\n",
+    "    ):\n",
+    "        regions = gpd.read_file(IBGE_POLIGONO)\n",
     "\n",
-    "\t\t# Convert pandas dataframe to geopandas df with geometry point given coordinates\n",
-    "\t\tgdf_points = gpd.GeoDataFrame(df, geometry=gpd.points_from_xy(df.Longitude, df.Latitude))\n",
+    "        # Convert pandas dataframe to geopandas df with geometry point given coordinates\n",
+    "        gdf_points = gpd.GeoDataFrame(\n",
+    "            df, geometry=gpd.points_from_xy(df.Longitude, df.Latitude)\n",
+    "        )\n",
     "\n",
-    "\t\t# Set the same coordinate reference system (CRS) as the regions shapefile\n",
-    "\t\tgdf_points.crs = regions.crs\n",
+    "        # Set the same coordinate reference system (CRS) as the regions shapefile\n",
+    "        gdf_points.crs = regions.crs\n",
     "\n",
-    "\t\t# Spatial join points to the regions\n",
-    "\t\tgdf = gpd.sjoin(gdf_points, regions, how='inner', predicate='within')\n",
+    "        # Spatial join points to the regions\n",
+    "        gdf = gpd.sjoin(gdf_points, regions, how=\"inner\", predicate=\"within\")\n",
     "\n",
-    "\t\tif check_municipio:\n",
-    "\t\t\t# Check correctness of Coordinates\n",
-    "\t\t\tcheck_coords = gdf.Código_Município != gdf.CD_MUN\n",
+    "        if check_municipio:\n",
+    "            # Check correctness of Coordinates\n",
+    "            check_coords = gdf.Código_Município != gdf.CD_MUN\n",
     "\n",
-    "\t\t\tlog = \"\"\"[(\"Colunas\", [\"Código_Município\", \"Município\", \"UF\"]),\n",
+    "            log = \"\"\"[(\"Colunas\", [\"Código_Município\", \"Município\", \"UF\"]),\n",
     "\t\t\t\t\t(\"Processamento\", \"Informações substituídas  pela localização correta das coordenadas.\")\t\t      \n",
     "\t\t\t\t\"\"\"\n",
-    "\t\t\tself.register_log(gdf, log, check_coords)\n",
+    "            self.register_log(gdf, log, check_coords)\n",
     "\n",
-    "\t\t\tgdf.drop(['Código_Município', 'Município', 'UF'], axis=1, inplace=True)\n",
+    "            gdf.drop([\"Código_Município\", \"Município\", \"UF\"], axis=1, inplace=True)\n",
     "\n",
-    "\t\tgdf.rename(\n",
-    "\t\t\tcolumns={\n",
-    "\t\t\t\t'CD_MUN': 'Código_Município',\n",
-    "\t\t\t\t'NM_MUN': 'Município',\n",
-    "\t\t\t\t'SIGLA_UF': 'UF',\n",
-    "\t\t\t},\n",
-    "\t\t\tinplace=True,\n",
-    "\t\t)\n",
+    "        gdf.rename(\n",
+    "            columns={\n",
+    "                \"CD_MUN\": \"Código_Município\",\n",
+    "                \"NM_MUN\": \"Município\",\n",
+    "                \"SIGLA_UF\": \"UF\",\n",
+    "            },\n",
+    "            inplace=True,\n",
+    "        )\n",
     "\n",
-    "\t\treturn gdf\n",
+    "        return gdf\n",
     "\n",
-    "\tdef validate_coordinates(self, df: pd.DataFrame, check_municipio: bool = True) -> pd.DataFrame:\n",
-    "\t\t\"\"\"\n",
-    "\t\tValidates the coordinates in the given DataFrame.\n",
+    "    def validate_coordinates(\n",
+    "        self, df: pd.DataFrame, check_municipio: bool = True\n",
+    "    ) -> pd.DataFrame:\n",
+    "        \"\"\"\n",
+    "        Validates the coordinates in the given DataFrame.\n",
     "\n",
-    "\t\tArgs:\n",
-    "\t\t        df: The DataFrame containing the coordinates to be validated.\n",
-    "\t\t        check_municipio: A boolean indicating whether to check the municipality information (default: True).\n",
+    "        Args:\n",
+    "                df: The DataFrame containing the coordinates to be validated.\n",
+    "                check_municipio: A boolean indicating whether to check the municipality information (default: True).\n",
     "\n",
-    "\t\tReturns:\n",
-    "\t\t        pd.DataFrame: The DataFrame with validated coordinates.\n",
+    "        Returns:\n",
+    "                pd.DataFrame: The DataFrame with validated coordinates.\n",
     "\n",
-    "\t\tRaises:\n",
-    "\t\t        None\n",
-    "\t\t\"\"\"\n",
-    "\t\tself.verify_shapefile_folder()\n",
-    "\t\tif check_municipio:\n",
-    "\t\t\tdf = self.fill_nan_coordinates(df)\n",
-    "\t\treturn self.intersect_coordinates_on_poligon(df, check_municipio)\n",
+    "        Raises:\n",
+    "                None\n",
+    "        \"\"\"\n",
+    "        self.verify_shapefile_folder()\n",
+    "        if check_municipio:\n",
+    "            df = self.fill_nan_coordinates(df)\n",
+    "        return self.intersect_coordinates_on_poligon(df, check_municipio)\n",
     "\n",
-    "\tdef _format(\n",
-    "\t\tself,\n",
-    "\t\tdfs: List,  # List with the individual API sources\n",
-    "\t) -> pd.DataFrame:  # Processed DataFrame\n",
-    "\t\taero = self.validate_coordinates(dfs.pop(), False)\n",
-    "\t\tanatel = self.validate_coordinates(pd.concat(dfs, ignore_index=True))\n",
-    "\t\tdf = pd.concat([aero, anatel], ignore_index=True).sort_values(\n",
-    "\t\t\t['Frequência', 'Latitude', 'Longitude'], ignore_index=True\n",
-    "\t\t)\n",
-    "\t\treturn df.loc[:, self.columns]"
+    "    def _format(\n",
+    "        self,\n",
+    "        dfs: List,  # List with the individual API sources\n",
+    "    ) -> pd.DataFrame:  # Processed DataFrame\n",
+    "        aero = self.validate_coordinates(dfs.pop(), False)\n",
+    "        anatel = self.validate_coordinates(pd.concat(dfs, ignore_index=True))\n",
+    "        df = pd.concat([aero, anatel], ignore_index=True).sort_values(\n",
+    "            [\"Frequência\", \"Latitude\", \"Longitude\"], ignore_index=True\n",
+    "        )\n",
+    "        return df.loc[:, self.columns]"
    ]
   },
   {
