Fixing the column names in aeronautica.py This commit closes Issue #14

--- a/nbs/01f_telecom.ipynb
+++ b/nbs/01f_telecom.ipynb
@@ -182,33 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "if __name__ == '__main__':\n",
-    "\timport time\n",
-    "\n",
-    "\tstart = time.perf_counter()\n",
-    "\n",
-    "\tdata = Telecom()\n",
-    "\n",
-    "\tdata.update()\n",
-    "\n",
-    "\tprint('DATA')\n",
-    "\n",
-    "\tdisplay(data.df)\n",
-    "\n",
-    "\tprint(150 * '=')\n",
-    "\n",
-    "\tprint('DISCARDED!')\n",
-    "\n",
-    "\tdisplay(data.discarded[['Frequência', 'Entidade', 'Log']])\n",
-    "\n",
-    "\tprint(150 * '=')\n",
-    "\n",
-    "\tprint(data.df.Multiplicidade.sum())\n",
-    "\n",
-    "\tdata.save()\n",
-    "\n",
-    "\tprint(f'Elapsed time: {time.perf_counter() - start} seconds')"
+    "#| export\n"
    ]
   },
   {
