--- a/nbs/01g_smp.ipynb
+++ b/nbs/01g_smp.ipynb
@@ -201,13 +201,13 @@
     "\t\tself,\n",
     "\t\tdf: pd.DataFrame,  # DataFrame de Origem\n",
     "\t) -> pd.DataFrame:  # DataFrame com os canais inválidos excluídos\n",
-    "\t\tdf_sub = df[df.Canalização == 'Downlink'].copy().reset_index(drop=True)\n",
-    "\t\tfor flag in ['Uplink', 'Inválida']:\n",
-    "\t\t\tdiscarded = df[df.Canalização == flag].copy()\n",
-    "\t\t\tif not discarded.empty:\n",
-    "\t\t\t\tlog = f\"\"\"[(\"Colunas\", (\"Frequência\", \"Largura_Emissão(kHz)\")),  \n",
-    "                         (\"Processamento\", \"Canalização {flag}\")]\"\"\"\n",
-    "\t\t\t\tself.append2discarded(self.register_log(discarded, log))\n",
+    "\t\tdf_sub = df[df.Canalização == 'Downlink'].reset_index(drop=True)\n",
+    "\t\t# for flag in [\"Uplink\", \"Inválida\"]:\n",
+    "\t\t#     discarded = df[df.Canalização == flag]\n",
+    "\t\t#     if not discarded.empty:\n",
+    "\t\t#         log = f\"\"\"[(\"Colunas\", (\"Frequência\", \"Largura_Emissão(kHz)\")),\n",
+    "\t\t#                  (\"Processamento\", \"Canalização {flag}\")]\"\"\"\n",
+    "\t\t#         self.append2discarded(self.register_log(discarded, log))\n",
     "\t\treturn df_sub\n",
     "\n",
     "\tdef validate_channels(\n",
