--- a/nbs/02d_redemet.ipynb
+++ b/nbs/02d_redemet.ipynb
@@ -80,8 +80,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "URL = \"https://api-redemet.decea.mil.br/produtos/radar/maxcappi?api_key={}&{}\"\n",
-    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]"
+    "URL = 'https://api-redemet.decea.mil.br/produtos/radar/maxcappi?api_key={}&{}'\n",
+    "UNIQUE_COLS = ['Frequência', 'Latitude', 'Longitude']\n"
    ]
   },
   {
@@ -92,33 +92,26 @@
    "source": [
     "#|export\n",
     "def get_redemet() -> (\n",
-    "    pd.DataFrame\n",
+    "\tpd.DataFrame\n",
     "):  # DataFrame com frequências, coordenadas e descrição das estações VOR\n",
-    "    # sourcery skip: use-fstring-for-concatenation\n",
-    "    \"\"\"Faz a requisição get à API do REDEMET usanda a chave `apikey`, processa o json e o retorna como Dataframe\"\"\"\n",
-    "    load_dotenv()\n",
-    "    date = datetime.now().strftime(\"%Y%m%d\")\n",
-    "    link = URL.format(os.environ[\"RMETKEY\"], date)\n",
-    "    response = urlopen(link)\n",
-    "    if (\n",
-    "        response.status != 200\n",
-    "        or \"application/json\" not in response.headers[\"content-type\"]\n",
-    "    ):\n",
-    "        raise ValueError(\n",
-    "            f\"Resposta a requisição não foi bem sucedida: {response.status=}\"\n",
-    "        )\n",
-    "    data_json = json.loads(response.read())\n",
-    "    df = pd.json_normalize(\n",
-    "        data_json[\"data\"][\"radar\"][0],\n",
-    "    )\n",
-    "    df[\"Frequency\"] = \"2800\"\n",
-    "    df[\"Description\"] = df.nome.astype(\"string\")\n",
-    "    df = df[[\"Frequency\", \"lat_center\", \"lon_center\", \"Description\"]].astype(\n",
-    "        \"string\", copy=False\n",
-    "    )\n",
-    "    df[\"Fonte\"] = \"REDEMET\"\n",
-    "    df = df.rename(columns={\"lat_center\": \"Latitude\", \"lon_center\": \"Longitude\"})\n",
-    "    return df.drop_duplicates(UNIQUE_COLS, ignore_index=True)"
+    "\t# sourcery skip: use-fstring-for-concatenation\n",
+    "\t\"\"\"Faz a requisição get à API do REDEMET usanda a chave `apikey`, processa o json e o retorna como Dataframe\"\"\"\n",
+    "\tload_dotenv()\n",
+    "\tdate = datetime.now().strftime('%Y%m%d')\n",
+    "\tlink = URL.format(os.environ['RMETKEY'], date)\n",
+    "\tresponse = urlopen(link)\n",
+    "\tif response.status != 200 or 'application/json' not in response.headers['content-type']:\n",
+    "\t\traise ValueError(f'Resposta a requisição não foi bem sucedida: {response.status=}')\n",
+    "\tdata_json = json.loads(response.read())\n",
+    "\tdf = pd.json_normalize(\n",
+    "\t\tdata_json['data']['radar'][0],\n",
+    "\t)\n",
+    "\tdf['Frequência'] = '2800'\n",
+    "\tdf['Entidade'] = df.nome.astype('string')\n",
+    "\tdf = df[['Frequência', 'lat_center', 'lon_center', 'Entidade']].astype('string', copy=False)\n",
+    "\tdf['Fonte'] = 'REDEMET'\n",
+    "\tdf = df.rename(columns={'lat_center': 'Latitude', 'lon_center': 'Longitude'})\n",
+    "\treturn df.drop_duplicates(UNIQUE_COLS, ignore_index=True)"
    ]
   },
   {
