Testing the full workflow. Work in progress

--- a/nbs/00b_format.ipynb
+++ b/nbs/00b_format.ipynb
@@ -240,16 +240,14 @@
    "source": [
     "# | export\n",
     "def get_km_distance(row):\n",
-    "\treturn geodesic((row[0], row[1]), (row[2], row[3])).km\n",
+    "\treturn geodesic((row.iloc[0], row.iloc[1]), (row.iloc[2], row.iloc[3])).km\n",
     "\n",
     "\n",
     "def merge_on_frequency(\n",
     "\tdf_left: pd.DataFrame,  # DataFrame da esquerda a ser mesclado\n",
     "\tdf_right: pd.DataFrame,  # DataFrame da direira a ser mesclado\n",
     "\ton: str = 'Frequência',  # Coluna usada como chave de mesclagem\n",
-    "\tcoords: Tuple[str] = ('Latitude', 'Longitude'),  # Coordenadas usadas para avaliar a distância\n",
     "\tcols2merge: str = ('Entidade', 'Fonte'),  # Colunas a serem mescladas\n",
-    "\tsuffixes: Tuple[str] = ('_x', '_y'),  # Sufixo para as colunas que foram criadas\n",
     ") -> pd.DataFrame:  # DataFrame resultante da mesclagem\n",
     "\t\"\"\"Mescla os dataframes baseados na frequência\n",
     "\tÉ assumido que as colunas de ambos uma é subconjunto ou idêntica à outra, caso contrário os filtros não irão funcionar como esperado\n",
@@ -261,13 +259,12 @@
     "\t\tdf_right,\n",
     "\t\ton=on,\n",
     "\t\thow='outer',\n",
-    "\t\tsuffixes=suffixes,\n",
     "\t\tindicator=True,\n",
     "\t\tcopy=False,\n",
     "\t)\n",
     "\n",
-    "\tx, y = suffixes\n",
-    "\tlat, long = coords\n",
+    "\tx, y = '_x', '_y'\n",
+    "\tlat, long = 'Latitude', 'Longitude'\n",
     "\n",
     "\tleft = df._merge == 'left_only'\n",
     "\tright = df._merge == 'right_only'\n",
