--- a/nbs/01f_telecom.ipynb
+++ b/nbs/01f_telecom.ipynb
@@ -139,7 +139,6 @@
     "\tdef cols_mapping(self):\n",
     "\t\treturn DICT_LICENCIAMENTO\n",
     "\n",
-    "\t@cached_property\n",
     "\tdef extraction(self) -> pd.DataFrame:\n",
     "\t\tpipeline = [{'$match': self.query}, {'$project': self.projection}]\n",
     "\t\tif self.limit > 0:\n",
@@ -166,7 +165,7 @@
     "\t\t# .count() drop the NaN from the subset, not keeping them\n",
     "\t\tdf_sub.dropna(subset=AGG_LICENCIAMENTO, inplace=True)\n",
     "\t\tdf_sub['Multiplicidade'] = (\n",
-    "\t\t\tdf.groupby(AGG_LICENCIAMENTO, dropna=True, sort=False).size().values\n",
+    "\t\t\tdf.groupby(AGG_LICENCIAMENTO, dropna=True, sort=False, observed=True).size().values\n",
     "\t\t)\n",
     "\t\tlog = f'[(\"Colunas\", {AGG_LICENCIAMENTO}), (\"Processamento\", \"Agrupamento\")]'\n",
     "\t\tdf_sub = self.register_log(df_sub, log, df_sub.Multiplicidade > 1)\n",
@@ -182,7 +181,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n"
+    "#| export\n",
+    "# | export# | export\n",
+    "# | export"
    ]
   },
   {
