--- a/nbs/01g_smp.ipynb
+++ b/nbs/01g_smp.ipynb
@@ -147,7 +147,6 @@
     "\tdef cols_mapping(self):\n",
     "\t\treturn DICT_LICENCIAMENTO\n",
     "\n",
-    "\t@cached_property\n",
     "\tdef extraction(self) -> pd.DataFrame:\n",
     "\t\tpipeline = [{'$match': self.query}, {'$project': self.projection}]\n",
     "\t\tif self.limit > 0:\n",
@@ -166,9 +165,9 @@
     "\t\tdf['Número_Estação'] = df['Número_Estação'].astype('int')\n",
     "\t\tdf = df.sort_values('Número_Estação', ignore_index=True)\n",
     "\t\tdf['Largura_Emissão(kHz)'] = pd.to_numeric(df['Largura_Emissão(kHz)'], errors='coerce')\n",
-    "\t\tdf['Largura_Emissão(kHz)'] = df['Largura_Emissão(kHz)'].fillna(0)\n",
-    "\t\tdf['Classe_Emissão'] = df['Classe_Emissão'].fillna('NI')\n",
-    "\t\tdf['Tecnologia'] = df['Tecnologia'].fillna('NI')\n",
+    "\t\t# df['Largura_Emissão(kHz)'] = df['Largura_Emissão(kHz)'].fillna(0)\n",
+    "\t\t# df['Classe_Emissão'] = df['Classe_Emissão'].fillna('NI')\n",
+    "\t\t# df['Tecnologia'] = df['Tecnologia'].fillna('NI')\n",
     "\t\tduplicated = df.duplicated(subset=AGG_SMP, keep='first')\n",
     "\t\tdf_sub = df[~duplicated].copy().reset_index(drop=True)\n",
     "\t\t# discarded = df[duplicated].copy().reset_index(drop=True)\n",
@@ -181,7 +180,9 @@
     "\t\t#             (\"Processamento\", \"Registro com valor nulo presente\")]\"\"\"\n",
     "\t\t#     self.append2discarded(self.register_log(discarded_with_na, log))\n",
     "\t\tdf_sub.dropna(subset=AGG_SMP, inplace=True)\n",
-    "\t\tdf_sub['Multiplicidade'] = df.groupby(AGG_SMP, dropna=True, sort=False).size().values\n",
+    "\t\tdf_sub['Multiplicidade'] = (\n",
+    "\t\t\tdf.groupby(AGG_SMP, dropna=True, sort=False, observed=True).size().values\n",
+    "\t\t)\n",
     "\t\tdf_sub['Status'] = 'L'\n",
     "\t\tdf_sub['Fonte'] = 'MOSAICO'\n",
     "\t\tlog = f'[(\"Colunas\", {AGG_SMP}), (\"Processamento\", \"Agrupamento\")]'\n",
@@ -284,7 +285,7 @@
     "\t\t\t& (df['Largura_Emissão(kHz)'].notna())\n",
     "\t\t\t& (~np.isclose(df['Largura_Emissão(kHz)'], 0))\n",
     "\t\t)\n",
-    "\t\tdf.loc[:, ['Frequência', 'Offset']] = df.loc[:, ['Frequência', 'Offset']].astype('float')\n",
+    "\t\tdf[['Frequência', 'Offset']] = df[['Frequência', 'Offset']].astype('float')\n",
     "\t\tdf.loc[valid, 'Frequência_Recepção'] = df.loc[valid, 'Frequência'] - df.loc[valid, 'Offset']\n",
     "\t\treturn df\n",
     "\n",
@@ -301,9 +302,10 @@
     "\t\t\ton='Código_Município',\n",
     "\t\t\thow='left',\n",
     "\t\t)\n",
+    "\t\tdf[['Latitude', 'Longitude']] = df[['Latitude', 'Longitude']].astype('float')\n",
     "\t\tdf.loc[df.Multiplicidade > 1, ['Latitude', 'Longitude']] = coords[\n",
     "\t\t\t['Latitude', 'Longitude']\n",
-    "\t\t].values\n",
+    "\t\t].values.astype('float')\n",
     "\t\tlog = \"\"\"[(\"Colunas\", (\"Latitude\", \"Longitude\")), \n",
     "        (\"Processamento\", \"Substituição por Coordenadas do Município (Agrupamento)\")]\"\"\"\n",
     "\t\treturn self.register_log(df, log, df.Multiplicidade > 1)\n",
