--- a/nbs/02a_icao.ipynb
+++ b/nbs/02a_icao.ipynb
@@ -158,7 +158,9 @@
     "\tdf['Longitude'] = df.apply(lambda x: convert_longitude(x['Longitude'], x['WE']), axis=1)\n",
     "\tdf['Description'] = df.Facility + ', ' + df.Location\n",
     "\tdf['Fonte'] = 'ICAO'\n",
-    "\treturn df[['Frequência', 'Latitude', 'Longitude', 'Description', 'Fonte']]\n"
+    "\tdf = df[['Frequency', 'Latitude', 'Longitude', 'Description', 'Fonte']]\n",
+    "\tdf.columns = ['Frequência', 'Latitude', 'Longitude', 'Entidade', 'Fonte']\n",
+    "\treturn df\n"
    ]
   },
   {
@@ -192,7 +194,7 @@
     "\t\t\t\t\t\trow.Latitude,\n",
     "\t\t\t\t\t\trow.Longitude,\n",
     "\t\t\t\t\t\tentidade,\n",
-    "\t\t\t\t\t\tf'{origem} | CANALIZACAO-VOR',\n",
+    "\t\t\t\t\t\tf'{origem}-CANALIZACAO-VOR',\n",
     "\t\t\t\t\t]\n",
     "\treturn df\n"
    ]
