--- a/nbs/02b_aisweb.ipynb
+++ b/nbs/02b_aisweb.ipynb
@@ -265,8 +265,8 @@
     "\t\t\tself.request_stations,\n",
     "\t\t\tself.airports.AeroCode,\n",
     "\t\t\tthreadpool=True,\n",
-    "\t\t\tn_workers=8,\n",
-    "\t\t\tpause=0.1,\n",
+    "\t\t\tn_workers=20,\n",
+    "\t\t\t# pause=0.1,\n",
     "\t\t\tprogress=True,\n",
     "\t\t)\n",
     "\t\tdf = pd.concat(records).astype('string')\n",
