--- a/nbs/02c_aisgeo.ipynb
+++ b/nbs/02c_aisgeo.ipynb
@@ -176,7 +176,7 @@
     "\telse:\n",
     "\t\tdf['Frequência'] = (\n",
     "\t\t\tdf[[cols[0], cols[1]]]\n",
-    "\t\t\t.apply(lambda x: convert_frequency(x[0], x[1]), axis=1)\n",
+    "\t\t\t.apply(lambda x: convert_frequency(x.iloc[0], x.iloc[1]), axis=1)\n",
     "\t\t\t.astype('float')\n",
     "\t\t)\n",
     "\treturn df\n"
