--- a/nbs/01b_base.ipynb
+++ b/nbs/01b_base.ipynb
@@ -71,7 +71,7 @@
    ],
    "source": [
     "# | export\n",
-    "load_dotenv(find_dotenv())"
+    "load_dotenv(find_dotenv())\n"
    ]
   },
   {
@@ -94,111 +94,105 @@
     "#| export\n",
     "@dataclass\n",
     "class Base:\n",
-    "    folder: Union[str, Path] = Path(__file__).parent / \"arquivos\" / \"saida\"\n",
+    "\tfolder: Union[str, Path] = Path(__file__).parent / 'arquivos' / 'saida'\n",
     "\n",
-    "    def _read(self, stem: str) -> pd.DataFrame:\n",
-    "        \"\"\"Lê o dataframe formado por self.folder / self.stem.parquet.gzip\"\"\"\n",
-    "        file = Path(f\"{self.folder}/{stem}.parquet.gzip\")\n",
-    "        try:\n",
-    "            df = pd.read_parquet(file)\n",
-    "        except (ArrowInvalid, FileNotFoundError) as e:\n",
-    "            raise ValueError(f\"Error when reading {file}\") from e\n",
-    "        return df\n",
+    "\tdef _read(self, stem: str) -> pd.DataFrame:\n",
+    "\t\t\"\"\"Lê o dataframe formado por self.folder / self.stem.parquet.gzip\"\"\"\n",
+    "\t\tfile = Path(f'{self.folder}/{stem}.parquet.gzip')\n",
+    "\t\ttry:\n",
+    "\t\t\tdf = pd.read_parquet(file, dtype_backend='pyarrow')\n",
+    "\t\texcept (ArrowInvalid, FileNotFoundError) as e:\n",
+    "\t\t\traise ValueError(f'Error when reading {file}') from e\n",
+    "\t\treturn df\n",
     "\n",
-    "    def _save(\n",
-    "        self, df: pd.DataFrame, folder: Union[str, Path], stem: str\n",
-    "    ) -> pd.DataFrame:\n",
-    "        \"\"\"Format, Save and return a dataframe\"\"\"\n",
-    "        df = df.astype(\"string\").drop_duplicates(keep=\"first\", ignore_index=True)\n",
-    "        try:\n",
-    "            file = Path(f\"{folder}/{stem}.parquet.gzip\")\n",
-    "            df.to_parquet(file, compression=\"gzip\", index=False)\n",
-    "        except (ArrowInvalid, ArrowTypeError) as e:\n",
-    "            raise e(f\"Não foi possível salvar o arquivo parquet {file}\") from e\n",
-    "        return df\n",
+    "\tdef _save(self, df: pd.DataFrame, folder: Union[str, Path], stem: str) -> pd.DataFrame:\n",
+    "\t\t\"\"\"Format, Save and return a dataframe\"\"\"\n",
+    "\t\tdf = df.astype('string[pyarrow]').drop_duplicates(keep='first', ignore_index=True)\n",
+    "\t\ttry:\n",
+    "\t\t\tfile = Path(f'{folder}/{stem}.parquet.gzip')\n",
+    "\t\t\tdf.to_parquet(file, compression='gzip', index=False)\n",
+    "\t\texcept (ArrowInvalid, ArrowTypeError) as e:\n",
+    "\t\t\traise e(f'Não foi possível salvar o arquivo parquet {file}') from e\n",
+    "\t\treturn df\n",
     "\n",
-    "    @cached_property\n",
-    "    def df(self) -> pd.DataFrame:\n",
-    "        try:\n",
-    "            df = self._read(self.stem)\n",
-    "        except (ArrowInvalid, FileNotFoundError):\n",
-    "            df = self._format(self.extraction)\n",
-    "        return df\n",
+    "\tdef df(self) -> pd.DataFrame:\n",
+    "\t\ttry:\n",
+    "\t\t\tdf = self._read(self.stem)\n",
+    "\t\texcept (ArrowInvalid, FileNotFoundError):\n",
+    "\t\t\tdf = self._format(self.extraction())\n",
+    "\t\treturn df\n",
     "\n",
-    "    @staticmethod\n",
-    "    def parse_bw(\n",
-    "        bw: str,  # Designação de Emissão (Largura + Classe) codificada como string\n",
-    "    ) -> Tuple[str, str]:  # Largura e Classe de Emissão\n",
-    "        \"\"\"Parse the bandwidth string\"\"\"\n",
-    "        if match := re.match(RE_BW, bw):\n",
-    "            multiplier = BW[match[2]]\n",
-    "            if mantissa := match[3]:\n",
-    "                number = float(f\"{match[1]}.{mantissa}\")\n",
-    "            else:\n",
-    "                number = float(match[1])\n",
-    "            classe = match[4]\n",
-    "            return str(multiplier * number), str(classe)\n",
-    "        return pd.NA, pd.NA\n",
+    "\t@staticmethod\n",
+    "\tdef parse_bw(\n",
+    "\t\tbw: str,  # Designação de Emissão (Largura + Classe) codificada como string\n",
+    "\t) -> Tuple[str, str]:  # Largura e Classe de Emissão\n",
+    "\t\t\"\"\"Parse the bandwidth string\"\"\"\n",
+    "\t\tif match := re.match(RE_BW, bw):\n",
+    "\t\t\tmultiplier = BW[match[2]]\n",
+    "\t\t\tif mantissa := match[3]:\n",
+    "\t\t\t\tnumber = float(f'{match[1]}.{mantissa}')\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tnumber = float(match[1])\n",
+    "\t\t\tclasse = match[4]\n",
+    "\t\t\treturn str(multiplier * number), str(classe)\n",
+    "\t\treturn pd.NA, pd.NA\n",
     "\n",
-    "    @cached_property\n",
-    "    def discarded(self) -> pd.DataFrame:\n",
-    "        df = pd.DataFrame(columns=self.columns)\n",
-    "        # df[\"Log\"] = \"\"\n",
-    "        return df\n",
+    "\t@cached_property\n",
+    "\tdef discarded(self) -> pd.DataFrame:\n",
+    "\t\tdf = pd.DataFrame(columns=self.columns)\n",
+    "\t\t# df[\"Log\"] = \"\"\n",
+    "\t\treturn df\n",
     "\n",
-    "    def append2discarded(self, dfs: Union[pd.DataFrame, List]) -> None:\n",
-    "        \"\"\"Receives one of more dataframes and append to the discarded dataframe\"\"\"\n",
-    "        dfs = listify(dfs)\n",
-    "        if not self.discarded.empty:\n",
-    "            dfs.append(self.discarded)\n",
-    "        self.discarded = pd.concat(dfs, ignore_index=True)\n",
+    "\tdef append2discarded(self, dfs: Union[pd.DataFrame, List]) -> None:\n",
+    "\t\t\"\"\"Receives one of more dataframes and append to the discarded dataframe\"\"\"\n",
+    "\t\tdfs = listify(dfs)\n",
+    "\t\tif not self.discarded.empty:\n",
+    "\t\t\tdfs.append(self.discarded)\n",
+    "\t\tself.discarded = pd.concat(dfs, ignore_index=True)\n",
     "\n",
-    "    @staticmethod\n",
-    "    def register_log(df: pd.DataFrame, log: str, row_filter: pd.Series = None):\n",
-    "        \"\"\"Register a log in the dataframe\"\"\"\n",
-    "        if row_filter is None:\n",
-    "            row_filter = pd.Series(True, index=df.index)\n",
+    "\t@staticmethod\n",
+    "\tdef register_log(df: pd.DataFrame, log: str, row_filter: pd.Series = None):\n",
+    "\t\t\"\"\"Register a log in the dataframe\"\"\"\n",
+    "\t\tif row_filter is None:\n",
+    "\t\t\trow_filter = pd.Series(True, index=df.index)\n",
     "\n",
-    "        c1 = row_filter & df.Log == \"\"\n",
-    "        c2 = row_filter & df.Log != \"\"\n",
-    "        df.loc[c1, \"Log\"] = log\n",
-    "        df.loc[c2, \"Log\"] = df.loc[c2, \"Log\"].astype(\"string\") + \"|\" + log\n",
-    "        return df\n",
+    "\t\tdf['Log'] = df['Log'].astype('string')\n",
     "\n",
-    "    @property\n",
-    "    def columns(self):\n",
-    "        raise NotImplementedError(\n",
-    "            \"Subclasses devem implementar a propriedade 'columns'\"\n",
-    "        )\n",
+    "\t\tdf.loc[row_filter, 'Log'] = df.loc[row_filter, 'Log'].apply(\n",
+    "\t\t\tlambda x: log if not x else x + '|' + log\n",
+    "\t\t)\n",
+    "\t\treturn df\n",
     "\n",
-    "    @property\n",
-    "    def cols_mapping(self):\n",
-    "        raise NotImplementedError(\n",
-    "            \"Subclasses devem implementar a propriedade 'cols_mapping'\"\n",
-    "        )\n",
+    "\t@property\n",
+    "\tdef columns(self):\n",
+    "\t\traise NotImplementedError(\"Subclasses devem implementar a propriedade 'columns'\")\n",
     "\n",
-    "    @property\n",
-    "    def stem(self):\n",
-    "        raise NotImplementedError(\"Subclasses devem setar a propriedade stem!\")\n",
+    "\t@property\n",
+    "\tdef cols_mapping(self):\n",
+    "\t\traise NotImplementedError(\"Subclasses devem implementar a propriedade 'cols_mapping'\")\n",
     "\n",
-    "    def extraction(self) -> pd.DataFrame:\n",
-    "        raise NotImplementedError(\"Subclasses devem implementar o método extract\")\n",
+    "\t@property\n",
+    "\tdef stem(self):\n",
+    "\t\traise NotImplementedError('Subclasses devem setar a propriedade stem!')\n",
     "\n",
-    "    def _format(\n",
-    "        self,\n",
-    "        df: pd.DataFrame,  # DataFrame com os dados de Estações\n",
-    "    ) -> pd.DataFrame:  # DataFrame formatado\n",
-    "        \"\"\"Formata, limpa e padroniza os dados provenientes da query no banco\"\"\"\n",
-    "        raise NotImplementedError(\"Subclasses devem implementar o método _format\")\n",
+    "\tdef extraction(self) -> pd.DataFrame:\n",
+    "\t\traise NotImplementedError('Subclasses devem implementar o método extract')\n",
     "\n",
-    "    def update(self):\n",
-    "        self.df = self._format(self.extraction)\n",
+    "\tdef _format(\n",
+    "\t\tself,\n",
+    "\t\tdf: pd.DataFrame,  # DataFrame com os dados de Estações\n",
+    "\t) -> pd.DataFrame:  # DataFrame formatado\n",
+    "\t\t\"\"\"Formata, limpa e padroniza os dados provenientes da query no banco\"\"\"\n",
+    "\t\traise NotImplementedError('Subclasses devem implementar o método _format')\n",
     "\n",
-    "    def save(self, folder: Union[str, Path] = None):\n",
-    "        if folder is None:\n",
-    "            folder = self.folder\n",
-    "        self._save(self.df, folder, self.stem)\n",
-    "        self._save(self.discarded, folder, f\"{self.stem}_discarded\")"
+    "\tdef update(self):\n",
+    "\t\tself.df = self._format(self.extraction())\n",
+    "\n",
+    "\tdef save(self, folder: Union[str, Path] = None):\n",
+    "\t\tif folder is None:\n",
+    "\t\t\tfolder = self.folder\n",
+    "\t\tself._save(self.df, folder, self.stem)\n",
+    "\t\tself._save(self.discarded, folder, f'{self.stem}_discarded')"
    ]
   },
   {
