--- a/nbs/01e_srd.ipynb
+++ b/nbs/01e_srd.ipynb
@@ -48,11 +48,11 @@
     "from dotenv import find_dotenv, load_dotenv\n",
     "\n",
     "from extracao.constants import (\n",
-    "    BW_MAP,\n",
-    "    COLUNAS,\n",
-    "    DICT_SRD,\n",
-    "    MONGO_SRD,\n",
-    "    PROJECTION_SRD,\n",
+    "\tBW_MAP,\n",
+    "\tCOLUNAS,\n",
+    "\tDICT_SRD,\n",
+    "\tMONGO_SRD,\n",
+    "\tPROJECTION_SRD,\n",
     ")\n",
     "\n",
     "from extracao.datasources.mosaico import Mosaico"
@@ -98,7 +98,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "MONGO_URI = os.environ.get(\"MONGO_URI\")"
+    "MONGO_URI = os.environ.get('MONGO_URI')\n"
    ]
   },
   {
@@ -109,89 +109,82 @@
    "source": [
     "#| export\n",
     "class SRD(Mosaico):\n",
-    "    \"\"\"Classe para encapsular a lógica de extração de Radiodifusão\"\"\"\n",
+    "\t\"\"\"Classe para encapsular a lógica de extração de Radiodifusão\"\"\"\n",
     "\n",
-    "    def __init__(self, mongo_uri: str = MONGO_URI) -> None:\n",
-    "        super().__init__(mongo_uri)\n",
+    "\tdef __init__(self, mongo_uri: str = MONGO_URI) -> None:\n",
+    "\t\tsuper().__init__(mongo_uri)\n",
     "\n",
-    "    @property\n",
-    "    def stem(self):\n",
-    "        return \"srd\"\n",
+    "\t@property\n",
+    "\tdef stem(self):\n",
+    "\t\treturn 'srd'\n",
     "\n",
-    "    @property\n",
-    "    def collection(self):\n",
-    "        return \"srd\"\n",
+    "\t@property\n",
+    "\tdef collection(self):\n",
+    "\t\treturn 'srd'\n",
     "\n",
-    "    @property\n",
-    "    def query(self):\n",
-    "        return MONGO_SRD\n",
+    "\t@property\n",
+    "\tdef query(self):\n",
+    "\t\treturn MONGO_SRD\n",
     "\n",
-    "    @property\n",
-    "    def projection(self):\n",
-    "        return PROJECTION_SRD\n",
+    "\t@property\n",
+    "\tdef projection(self):\n",
+    "\t\treturn PROJECTION_SRD\n",
     "\n",
-    "    @property\n",
-    "    def columns(self):\n",
-    "        return COLUNAS\n",
+    "\t@property\n",
+    "\tdef columns(self):\n",
+    "\t\treturn COLUNAS\n",
     "\n",
-    "    @property\n",
-    "    def cols_mapping(self):\n",
-    "        return DICT_SRD\n",
+    "\t@property\n",
+    "\tdef cols_mapping(self):\n",
+    "\t\treturn DICT_SRD\n",
     "\n",
-    "    @cached_property\n",
-    "    def extraction(self) -> pd.DataFrame:\n",
-    "        pipeline = [\n",
-    "            # match the documents that satisfy your query\n",
-    "            {\"$match\": self.query},\n",
-    "            # project the fields that you want to keep\n",
-    "            {\"$project\": self.projection},\n",
-    "        ]\n",
-    "        df = self._extract(self.collection, pipeline)\n",
-    "        df.loc[df[\"estacao\"] == \"[]\", \"estacao\"] = \"{}\"\n",
-    "        cols = [\"srd_planobasico\", \"estacao\", \"habilitacao\", \"Status\"]\n",
-    "        for col in cols:\n",
-    "            df = df.join(pd.json_normalize(df[col].apply(eval)))\n",
-    "        df.drop(columns=cols, inplace=True)\n",
-    "        df[\"Log\"] = \"\"\n",
-    "        return df\n",
+    "\tdef extraction(self) -> pd.DataFrame:\n",
+    "\t\tpipeline = [\n",
+    "\t\t\t# match the documents that satisfy your query\n",
+    "\t\t\t{'$match': self.query},\n",
+    "\t\t\t# project the fields that you want to keep\n",
+    "\t\t\t{'$project': self.projection},\n",
+    "\t\t]\n",
+    "\t\tdf = self._extract(self.collection, pipeline)\n",
+    "\t\t# df.loc[df[\"estacao\"] == \"[]\", \"estacao\"] = \"{}\"\n",
+    "\t\t# cols = [\"srd_planobasico\", \"estacao\", \"habilitacao\", \"Status\"]\n",
+    "\t\t# for col in cols:\n",
+    "\t\t#     df = df.join(pd.json_normalize(df[col].apply(eval)))\n",
+    "\t\t# df.drop(columns=cols, inplace=True)\n",
+    "\t\tdf['Log'] = ''\n",
+    "\t\treturn df\n",
     "\n",
-    "    def _format(\n",
-    "        self,\n",
-    "        df: pd.DataFrame,  # DataFrame com o resultantes do banco de dados\n",
-    "    ) -> pd.DataFrame:  # DataFrame formatado\n",
-    "        \"\"\"Formata, limpa e padroniza os dados provenientes da query no banco\"\"\"\n",
+    "\tdef _format(\n",
+    "\t\tself,\n",
+    "\t\tdf: pd.DataFrame,  # DataFrame com o resultantes do banco de dados\n",
+    "\t) -> pd.DataFrame:  # DataFrame formatado\n",
+    "\t\t\"\"\"Formata, limpa e padroniza os dados provenientes da query no banco\"\"\"\n",
     "\n",
-    "        df = df.rename(columns=self.cols_mapping)\n",
-    "        status = df.Status.str.contains(\"-C1$|-C2$|-C3$|-C4$|-C7|-C98$\", na=False)\n",
-    "        # discarded = df[~status].copy()\n",
-    "        # log = \"\"\"[(\"Registro\", \"Status\"),\n",
-    "        #         (\"Processamento\", \"Registro com Status não considerado para fins de monitoração\")]\"\"\"\n",
-    "        # discarded = self.register_log(discarded, log)\n",
-    "        df = df[\n",
-    "            df.Status.str.contains(\"-C1$|-C2$|-C3$|-C4$|-C7|-C98$\", na=False)\n",
-    "        ].reset_index(drop=True)\n",
-    "        df[\"Frequência\"] = (\n",
-    "            df.Frequência.astype(\"string\").str.replace(\",\", \".\").astype(\"float\")\n",
-    "        )\n",
-    "        # discarded_with_na = df[df.Frequência.isna()].copy()\n",
-    "        # log = \"\"\"[(\"Registro\", \"Frequência\"),\n",
-    "        #         (\"Processamento\", \"Registro com valor nulo presente\")]\"\"\"\n",
-    "        # discarded_with_na = self.register_log(discarded_with_na, log)\n",
-    "        df.dropna(subset=\"Frequência\", ignore_index=True, inplace=True)  # type: ignore\n",
-    "        df.loc[df[\"Num_Serviço\"] == \"205\", \"Frequência\"] = df.loc[\n",
-    "            df[\"Num_Serviço\"] == \"205\", \"Frequência\"\n",
-    "        ].apply(lambda x: float(Decimal(x) / Decimal(1000)))\n",
-    "        df[\"Frequência\"] = df[\"Frequência\"].astype(\"float\")\n",
-    "        df[\"Validade_RF\"] = df.Validade_RF.astype(\"string\").str.slice(0, 10)\n",
-    "        df[\"Fonte\"] = \"MOSAICO\"\n",
-    "        df[\"Num_Serviço\"] = df[\"Num_Serviço\"].fillna(\"\")\n",
-    "        df[\"Designação_Emissão\"] = (\n",
-    "            df.Num_Serviço.astype(\"string\").fillna(\"\").map(BW_MAP)\n",
-    "        )\n",
-    "        df = self.split_designacao(df)\n",
-    "        df[\"Multiplicidade\"] = 1\n",
-    "        # self.append2discarded([self.discarded, discarded, discarded_with_na])\n",
-    "        return df.loc[:, self.columns]"
+    "\t\tdf = df.rename(columns=self.cols_mapping)\n",
+    "\t\tstatus = df.Status.str.contains('-C1$|-C2$|-C3$|-C4$|-C7|-C98$', na=False)\n",
+    "\t\t# discarded = df[~status].copy()\n",
+    "\t\t# log = \"\"\"[(\"Registro\", \"Status\"),\n",
+    "\t\t#         (\"Processamento\", \"Registro com Status não considerado para fins de monitoração\")]\"\"\"\n",
+    "\t\t# discarded = self.register_log(discarded, log)\n",
+    "\t\tdf = df[status].reset_index(drop=True)\n",
+    "\t\tdf['Frequência'] = df.Frequência.astype('string').str.replace(',', '.').astype('float')\n",
+    "\t\t# discarded_with_na = df[df.Frequência.isna()].copy()\n",
+    "\t\t# log = \"\"\"[(\"Registro\", \"Frequência\"),\n",
+    "\t\t#         (\"Processamento\", \"Registro com valor nulo presente\")]\"\"\"\n",
+    "\t\t# discarded_with_na = self.register_log(discarded_with_na, log)\n",
+    "\t\tdf.dropna(subset='Frequência', ignore_index=True, inplace=True)  # type: ignore\n",
+    "\t\tdf.loc[df['Num_Serviço'] == '205', 'Frequência'] = df.loc[\n",
+    "\t\t\tdf['Num_Serviço'] == '205', 'Frequência'\n",
+    "\t\t].apply(lambda x: float(Decimal(x) / Decimal(1000)))\n",
+    "\t\tdf['Frequência'] = df['Frequência'].astype('float')\n",
+    "\t\tdf['Validade_RF'] = df.Validade_RF.astype('string').str.slice(0, 10)\n",
+    "\t\tdf['Fonte'] = 'MOSAICO'\n",
+    "\t\tdf['Num_Serviço'] = df['Num_Serviço'].fillna('')\n",
+    "\t\tdf['Designação_Emissão'] = df.Num_Serviço.astype('string').fillna('').map(BW_MAP)\n",
+    "\t\tdf = self.split_designacao(df)\n",
+    "\t\tdf['Multiplicidade'] = 1\n",
+    "\t\t# self.append2discarded([self.discarded, discarded, discarded_with_na])\n",
+    "\t\treturn df.loc[:, self.columns]\n"
    ]
   },
   {
@@ -708,32 +701,32 @@
    "source": [
     "#|export\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    import time\n",
+    "if __name__ == '__main__':\n",
+    "\timport time\n",
     "\n",
-    "    start = time.perf_counter()\n",
+    "\tstart = time.perf_counter()\n",
     "\n",
-    "    data = SRD()\n",
+    "\tdata = SRD()\n",
     "\n",
-    "    data.update()\n",
+    "\tdata.update()\n",
     "\n",
-    "    print(\"DATA\")\n",
+    "\tprint('DATA')\n",
     "\n",
-    "    display(data.df)\n",
+    "\tdisplay(data.df)\n",
     "\n",
-    "    print(150 * \"=\")\n",
+    "\tprint(150 * '=')\n",
     "\n",
-    "    print(\"DISCARDED!\")\n",
+    "\tprint('DISCARDED!')\n",
     "\n",
-    "    display(data.discarded[[\"Frequência\", \"Entidade\", \"Log\"]])\n",
+    "\tdisplay(data.discarded[['Frequência', 'Entidade', 'Log']])\n",
     "\n",
-    "    print(150 * \"=\")\n",
+    "\tprint(150 * '=')\n",
     "\n",
-    "    print(data.df.Multiplicidade.sum())\n",
+    "\tprint(data.df.Multiplicidade.sum())\n",
     "\n",
-    "    data.save()\n",
+    "\tdata.save()\n",
     "\n",
-    "    print(f\"Elapsed time: {time.perf_counter() - start} seconds\")"
+    "\tprint(f'Elapsed time: {time.perf_counter() - start} seconds')"
    ]
   },
   {
